--- a/frontend/src/pages/Bugs/Bugs.css
+++ b/frontend/src/pages/Bugs/Bugs.css
@@ -1,5 +1,4 @@
 body {
-  background: radial-gradient(circle, #e7e9f7, #c9d7fb);
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   padding: 0;
@@ -24,6 +23,7 @@ body {
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-top: 70px;
+  overflow-y: auto;
 }
 
 .add-bug h2,
